UPDATE: Promotions endpoint with test, seeder, etc
